--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,15 @@
   min-width: 150px;
   margin-top: 10px;
 }
+
+.OrangeArticles {
+  color: #e46600;
+}
+
+.OneArticle {
+  font-weight: bold;
+}
+
+.GreenArticles {
+  color: #326647;
+}
