--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -7,3 +7,10 @@
     text-align: center;
     margin-bottom: 10px;
 }
+
+/* @media (min-width: 900px) {
+    .Article {
+        width: 630px;
+    }
+} */
+
