--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -4,13 +4,6 @@
 
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -25,53 +18,44 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #09d3ac;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.Red-color {
+.Red-color{
   color: red;
 }
 
-.Form-container {
+.FormContainer{
   display: flex;
   flex-direction: column;
 }
 
-.Form-label {
+.FormLabel{
   font-weight: bold;
   margin: auto;
   margin-bottom: 2px;
 }
 
-.Form-element {
+.FormElement{
   width: 400px;
   margin: auto;
   margin-bottom: 5px;
 }
 
-.Form-button {
+.FormButton{
   margin: auto;
   min-width: 150px;
   margin-top: 10px;
 }
 
-.OrangeArticles {
+.OrangeArticles{
   color: #e46600;
 }
 
-.OneArticle {
+.OneArticle{
   font-weight: bold;
 }
 
-.GreenArticles {
+.GreenArticles{
   color: #326647;
 }
