--- a/src/components/Employees/Employee/Employee.module.css
+++ b/src/components/Employees/Employee/Employee.module.css
@@ -5,4 +5,10 @@
     border: 1px solid #dddddd;
     box-shadow: 0 3px 4px #bbbbbb;
     padding: 12px;
+    cursor: pointer;
+    transition-duration: 0.3s;
+}
+
+.Employee:hover{
+    background-color: #efefef;
 }
